Section 'Description' is ready

--- a/index.html
+++ b/index.html
@@ -54,23 +54,48 @@
         </ul>
       </nav>
     </header>
-
     <main>
       <section class="hero">
         <div class="hero__content">
           <h1 class="hero__title">Поставщик услуг цифровой трансформации <br> и кибербезопасности</h1>
           <button class="button" type="button"><span class="button__text">На сайт</span></button>
         </div>
-
       </section>
       <section class="description">
-        <p class="description__text"><span class="description__text_red">Softline</span> – ведущий поставщик IT-решений
-          и сервисов.* Мы предлагаем комплексные IT-решения, облака, программное
-          и аппаратное обеспечение, решения по цифровой трансформации и кибербезопасности, а также широкий спектр
-          IT-услуг.</p>
+        <div class="description__inner">
+          <p class="description__text"><span class="description__text_red">Softline</span> – ведущий поставщик
+            IT-решений
+            и сервисов.* Мы предлагаем комплексные IT-решения, облака, программное
+            и аппаратное обеспечение, решения по цифровой трансформации и кибербезопасности, а также широкий спектр
+            IT-услуг.</p>
+        </div>
 
         <div class="description__digits">
-          Цифры
+          <div class="first-row">
+            <div class="description__item">
+              <p class="description__digit"><span class="description__sign description__sign_bold">></span> 30 лет</p>
+              <span class="description__explanation">на IT-рынке</span>
+            </div>
+            <div class="description__item">
+              <p class="description__digit">4600</p>
+              <span class="description__explanation">сотрудников в России</span>
+            </div>
+            <div class="description__item">
+              <p class="description__digit">25</p>
+              <span class="description__explanation">городов России</span>
+            </div>
+          </div>
+          <div class="second-row">
+            <div class="description__item description__item_padding">
+              <p class="description__digit">2000<span class="description__sign">+</span></p>
+              <span class="description__explanation">разработчиков</span>
+            </div>
+            <div class="description__item">
+              <p class="description__digit">3000 <span class="description__sign">+</span></p>
+              <span class="description__explanation description__explanation_long">сотрудников ежегодно проходят оценку
+                и обучение</span>
+            </div>
+          </div>
         </div>
       </section>
 
