Adaptivity is ready

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="ru">
 
 <head>
@@ -42,37 +42,35 @@
       <div class="description">
         <div class="description__inner">
           <p class="description__text"><span class="highlight-text">Softline</span> – ведущий поставщик
-            IT-решений и сервисов.*</p>
-          <p class="description__text"> Мы предлагаем комплексные IT-решения, облака, программное <br>
-            и аппаратное обеспечение, решения по цифровой трансформации <br> и кибербезопасности, а также широкий спектр
-            IT-услуг.</p>
+            IT-решений и сервисов.* <br class="whitespace_one">
+            Мы предлагаем комплексные IT-решения, облака, программное <br class="whitespace"> и аппаратное
+            обеспечение, решения <br class="whitespace_three"> по цифровой трансформации
+            <br class="whitespace"> и кибербезопасности, а также широкий спектр
+            IT-услуг.
+          </p>
         </div>
 
         <div class="description__digits">
-          <div class="first-row">
-            <div class="description__item">
-              <p class="description__digit"><span class="description__sign description__sign_bold">></span> 30 лет</p>
-              <span class="description__explanation">на IT-рынке</span>
-            </div>
-            <div class="description__item">
-              <p class="description__digit">4600</p>
-              <span class="description__explanation">сотрудников в России</span>
-            </div>
-            <div class="description__item">
-              <p class="description__digit">25</p>
-              <span class="description__explanation">городов России</span>
-            </div>
+          <div class="description__item">
+            <p class="description__digit"><span class="description__sign description__sign_bold">></span> 30 лет</p>
+            <span class="description__explanation">на IT-рынке</span>
           </div>
-          <div class="second-row">
-            <div class="description__item description__item_padding">
-              <p class="description__digit">2000<span class="description__sign">+</span></p>
-              <span class="description__explanation">разработчиков</span>
-            </div>
-            <div class="description__item">
-              <p class="description__digit">3000 <span class="description__sign">+</span></p>
-              <span class="description__explanation description__explanation_long">сотрудников ежегодно проходят оценку
-                и обучение</span>
-            </div>
+          <div class="description__item">
+            <p class="description__digit">4600</p>
+            <span class="description__explanation">сотрудников в России</span>
+          </div>
+          <div class="description__item">
+            <p class="description__digit">25</p>
+            <span class="description__explanation">городов России</span>
+          </div>
+          <div class="description__item">
+            <p class="description__digit">2000<span class="description__sign">+</span></p>
+            <span class="description__explanation">разработчиков</span>
+          </div>
+          <div class="description__item">
+            <p class="description__digit">3000 <span class="description__sign">+</span></p>
+            <span class="description__explanation description__explanation_long">сотрудников ежегодно проходят оценку
+              и обучение</span>
           </div>
         </div>
       </div>
@@ -90,28 +88,67 @@
             </div>
             <div class="offices__dropdown-menu">
               <ul class="submenu">
-                <li class="submenu__item">Москва</li>
-                <li class="submenu__item">Центр
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Москва</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4" fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
+                </li>
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Центр</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4" fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
                   <ul class="submenu__links">
                     <li><a class="submenu__link" href="#">Воронеж</a></li>
                     <li><a class="submenu__link" href="#">Ярославль</a></li>
                     <li><a class="submenu__link" href="#">Белгород</a></li>
                   </ul>
                 </li>
-                <li class="submenu__item">Северо-Запад
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Северо-Запад</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4"
+                         fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
                   <ul class="submenu__links">
                     <li><a class="submenu__link" href="#">Санкт-Петербург</a></li>
                     <li><a class="submenu__link" href="#">Калининградд</a></li>
                   </ul>
                 </li>
-                <li class="submenu__item">Юг
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Юг</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4"
+                         fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
                   <ul class="submenu__links">
                     <li><a class="submenu__link" href="#">Ростов-на-Дону</a></li>
                     <li><a class="submenu__link" href="#">Краснодар</a></li>
                     <li><a class="submenu__link" href="#">Волгоград</a></li>
                   </ul>
                 </li>
-                <li class="submenu__item">Волга
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Волга</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4"
+                         fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
                   <ul class="submenu__links">
                     <li><a class="submenu__link" href="#">Казань</a></li>
                     <li><a class="submenu__link" href="#">Самара</a></li>
@@ -120,7 +157,15 @@
                     <li><a class="submenu__link" href="#">Нижний Новгород</a></li>
                   </ul>
                 </li>
-                <li class="submenu__item">Урал
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Урал</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4"
+                         fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
                   <ul class="submenu__links">
                     <li><a class="submenu__link" href="#">Екатеринбург</a></li>
                     <li><a class="submenu__link" href="#">Челябинск</a></li>
@@ -130,7 +175,15 @@
                     <li><a class="submenu__link" href="#">Ижевск</a></li>
                   </ul>
                 </li>
-                <li class="submenu__item">Сибирь
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Сибирь</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4"
+                         fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
                   <ul class="submenu__links">
                     <li><a class="submenu__link" href="#">Новосибирск</a></li>
                     <li><a class="submenu__link" href="#">Омск</a></li>
@@ -139,7 +192,15 @@
                     <li><a class="submenu__link" href="#">Иркутск</a></li>
                   </ul>
                 </li>
-                <li class="submenu__item"> Дальний Восток
+                <li class="submenu__item">
+                  <div class="submenu__item-name">
+                    <span>Дальний Восток</span>
+                    <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                         viewBox="0 0 8 4"
+                         fill="none">
+                      <path d="M4 4L7.4641 0.25H0.535898L4 4Z" fill="#444444" />
+                    </svg>
+                  </div>
                   <ul class="submenu__links">
                     <li><a class="submenu__link" href="#">Хабаровск</a></li>
                     <li><a class="submenu__link" href="#">Владивосток</a></li>
@@ -182,6 +243,11 @@
             <div class="card">
               <div class="card__content">
                 <h4 class="card__title">Решения Softline</h4>
+                <div class="card__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                    <path d="M11.5713 14.7858L17.9999 21.2143L24.4284 14.7858" stroke="white" stroke-width="2" />
+                  </svg>
+                </div>
                 <p class="card__text">ГК Softline предлагает клиентам собственную линейку оборудования (ПК, серверы,
                   торговое оборудование и
                   проч.), разработку программных продуктов, облачных решений, решений в области информационной
@@ -193,6 +259,11 @@
             <div class="card">
               <div class="card__content">
                 <h4 class="card__title">Кибербезопасность</h4>
+                <div class="card__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                    <path d="M11.5713 14.7858L17.9999 21.2143L24.4284 14.7858" stroke="white" stroke-width="2" />
+                  </svg>
+                </div>
                 <p class="card__text"> Softline обладает всеми необходимыми государственными лицензиями для организации
                   проектов по информационной безопасности и аттестации. </p>
               </div>
@@ -202,6 +273,11 @@
             <div class="card">
               <div class="card__content">
                 <h4 class="card__title">Импортозамещение</h4>
+                <div class="card__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                    <path d="M11.5713 14.7858L17.9999 21.2143L24.4284 14.7858" stroke="white" stroke-width="2" />
+                  </svg>
+                </div>
                 <p class="card__text">ГК Softline обладает широчайшим портфелем решений и услуг для импортозамещения,
                   включая ПО и оборудование собственного производства.</p>
               </div>
@@ -211,6 +287,11 @@
             <div class="card">
               <div class="card__content">
                 <h4 class="card__title">Облачные решения</h4>
+                <div class="card__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                    <path d="M11.5713 14.7858L17.9999 21.2143L24.4284 14.7858" stroke="white" stroke-width="2" />
+                  </svg>
+                </div>
                 <p class="card__text">Softline использует современные облачные решения как российских, так и
                   международных вендоров для масштабирования бизнеса своих клиентов. Подписки, услуги, трансформация.
                 </p>
@@ -221,6 +302,11 @@
             <div class="card">
               <div class="card__content card__content_padding">
                 <h4 class="card__title">Цифровая трансформация <br> и разработка ПО</h4>
+                <div class="card__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                    <path d="M11.5713 14.7858L17.9999 21.2143L24.4284 14.7858" stroke="white" stroke-width="2" />
+                  </svg>
+                </div>
                 <p class="card__text"> Softline использует современные технологи и новые возможности для увеличения
                   производительности бизнеса заказчика. В штате ГК Softline - 2000+ разработчиков, которые
                   трансформируют ПО под нужды конкретного предприятия.</p>
@@ -230,7 +316,12 @@
           <div class="directions__card directions__card_6">
             <div class="card">
               <div class="card__content">
-                <h4 class="card__title card__title_line">Техническая поддержка Softline</h4>
+                <h4 class="card__title card__title_line">Техническая поддержка <br> Softline</h4>
+                <div class="card__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                    <path d="M11.5713 14.7858L17.9999 21.2143L24.4284 14.7858" stroke="white" stroke-width="2" />
+                  </svg>
+                </div>
                 <p class="card__text">200+ инженеров, 24 часа в сутки, 7 дней в неделю, 12 месяцев в году, сервисное
                   партнерство с 30+ мировыми производителями.</p>
               </div>
@@ -239,7 +330,7 @@
         </div>
       </section>
 
-      <section class="compensation margin__bottom_100">
+      <section class="compensation">
         <div class="compensation__wrapper">
           <div class="compensation__info">
             <h2 class="section-title">Компенсационный пакет</h2>
@@ -257,7 +348,8 @@
                             stroke="#B01736" stroke-width="2" />
                     </g>
                   </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
@@ -266,7 +358,8 @@
               <div class="icon">
                 <div class="icon__wrapper">
                   <img class="icon__img" src="./src/images/icon-cake.png" alt="icon cake">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
@@ -288,7 +381,8 @@
                       </clipPath>
                     </defs>
                   </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
@@ -318,7 +412,8 @@
                       </clipPath>
                     </defs>
                   </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
@@ -341,7 +436,8 @@
                             stroke="#B01736" mask="url(#path-2-outside-1_1_392)" />
                     </g>
                   </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
@@ -355,7 +451,8 @@
             </svg>
           </div>
           <div class="compensation__extra">
-            <h3 class="compensation__text">Программа дополнительной мотивации <span class="highlight-text">доплата 12%
+            <h3 class="compensation__text">Программа дополнительной мотивации <br> <span class="highlight-text">доплата
+                12%
                 от суммы</span></h3>
             <div class="compensation__icons">
               <div class="icon">
@@ -372,7 +469,8 @@
                       </clipPath>
                     </defs>
                   </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
@@ -391,7 +489,8 @@
                             stroke="#B01736" stroke-width="2" />
                     </g>
                   </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
@@ -407,7 +506,8 @@
                     <path d="M2.44763 21H45.5524C46.915 21 47.5201 19.3298 46.4597 18.4956L24.6194 1.31241C24.0844 0.891515 23.3193 0.8964 22.79 1.32409L1.52562 18.5073C0.483846 19.3491 1.09448 21 2.44763 21Z"
                           stroke="#B01736" stroke-width="2" />
                   </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="110" height="110" viewBox="0 0 110 110" fill="none">
+                  <svg class="icon__background" xmlns="http://www.w3.org/2000/svg" width="110" height="110"
+                       viewBox="0 0 110 110" fill="none">
                     <circle opacity="0.05" cx="55" cy="55" r="55" fill="black" />
                   </svg>
                 </div>
